<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.user_edit_information"
    android:background="@color/lightGRAY">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgprofil"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/person" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/choose"
                        android:layout_centerVertical="true"
                        android:textSize="17dp"
                        android:gravity="center"
                        android:textColor="@color/heading"
                        android:textStyle="bold"/>

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textSize="17dp"
                android:layout_marginTop="20dp"
                android:text="@string/aboutyou"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/libele2"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Homme"
                        android:textSize="@dimen/intitule2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lastName"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/libele2"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Cédric"
                        android:textSize="@dimen/intitule2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/firstName"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/libele2"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nampa"
                        android:textSize="@dimen/intitule2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/born1"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/libele2"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="02 octobre 1995"
                        android:textSize="@dimen/intitule2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cni1"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/libele2"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ISTDI16E012889"
                        android:editable="false"
                        android:inputType="text"
                        android:textSize="@dimen/intitule2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/occupation"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/libele2"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Statisticien"
                        android:editable="false"
                        android:inputType="text"
                        android:textSize="@dimen/intitule2"/>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circlebutton"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:backgroundTint="@color/skyblue"
                    android:text="@string/saveInfos"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emailE"
                    android:textSize="@dimen/libele2"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adresseE"
                        android:textSize="@dimen/libele2"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Namcid@ymail.com"
                        android:editable="false"
                        android:inputType="text"
                        android:textSize="@dimen/intitule2"/>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circlebutton"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:backgroundTint="@color/skyblue"
                    android:text="@string/saveEmail"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile"
                    android:textSize="@dimen/libele2"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:id="@+id/lnNumber"
                    android:layout_below="@id/separate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/cmr"
                        android:layout_gravity="center"/>

                    <Spinner
                        android:id="@+id/spcountry"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"></Spinner>

                    <View
                        android:id="@+id/separate2"
                        android:layout_below="@id/lnNumber"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:background="@color/silver"/>

                    <EditText
                        android:id="@+id/txtTelephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:maxLength="9"
                        android:gravity="center"
                        android:hint="@string/phone"
                        android:inputType="number"/>
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circlebutton"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:backgroundTint="@color/skyblue"
                    android:text="@string/saveNumber"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pref"
                    android:textSize="@dimen/libele2"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>