<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Sign2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:background="@color/skyblue"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/ongo"
                android:layout_marginTop="10dp"/>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center|bottom"
                   android:text="@string/infossup"
                   android:textSize="23sp"
                   android:textStyle="bold"/>
           </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:weightSum="70"
            android:background="@color/lightGRAY"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:background="@color/lightGRAY"
                android:paddingTop="20dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/txtfirstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/firstName"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <EditText
                        android:id="@+id/txtlastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lastName"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp">

                    <EditText
                        android:id="@+id/txtusername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtdateNaissance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/born"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:inputType="date"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/term"
                        android:textSize="11sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/term1"
                        android:textSize="11sp"
                        android:linksClickable="true"
                        android:clickable="true"/>
                </LinearLayout>

                <Button
                    android:id="@+id/btninscription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/signup"
                    android:background="@color/white"
                    android:layout_marginRight="90dp"
                    android:layout_marginLeft="90dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>