<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="20dp"


    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            tools:src="@drawable/skimg" />

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="user"
                android:fontFamily="sans-serif"
                android:textColor="#333"
                android:textStyle="bold"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/txthour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10:00"
                android:textColor="#333"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:textSize="18sp"
                android:layout_gravity="end"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <TextView
            android:id="@+id/txttext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"

            tools:text="@string/text"
            android:fontFamily="sans-serif"
            android:textColor="#333"
            android:textSize="18sp"
            android:clickable="false"
            android:inputType="textMultiLine"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtlike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/like"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/heading"
                android:linksClickable="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comment"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/heading"
                android:linksClickable="true"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>